Re-adds -2px hack stop the extra graph scrollbar

--- a/src/webviews/apps/plus/graph/graph.scss
+++ b/src/webviews/apps/plus/graph/graph.scss
@@ -382,8 +382,7 @@ a {
 	&__container {
 		display: flex;
 		flex-direction: column;
-		// height: calc(100vh - 2px); // shoot me -- the 2px is to stop the vertical scrollbar from showing up
-		height: 100vh; // shoot me -- the 2px is to stop the vertical scrollbar from showing up
+		height: calc(100vh - 2px); // shoot me -- the 2px is to stop the vertical scrollbar from showing up
 		gap: 0;
 		padding: 0 2px;
 	}
